--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=NjcwOTMwNjY3MjkwNDkyOTI4.XjZ5ug.D751wODUZ1rE_Ob2e4fWMOa52QI
+TOKEN=NjcwOTMwNjY3MjkwNDkyOTI4.XjaCuA.jjbd6zL2GkcyhLf3qminBZMq7GY
